# SDIZO-project1

./: README.md
projekt1/: CMakeLists.txt
projekt1/headers/: BST.h  Heap.h  List.h  Menu.h  RBT.h  Structure.h  Table.h
projekt1/loadFiles/: bst1  bst2  heap1  heap2
projekt1/main/: Menu.cpp  main.cpp
projekt1/resultsFiles/: resultsBST  resultsHeap  resultsList  resultsRBT  resultsTable
projekt1/structures/: BST.cpp  Heap.cpp  List.cpp  RBT.cpp  Table.cpp
